--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -1,7 +1,6 @@
 .news {
     background: $black;
-    display: flex;
-    justify-content: center;
+    @include childCenter(center);
     padding: 60px 0 120px;
 
     &__container {
@@ -16,8 +15,7 @@
         &-top {
 
             &-buttonsContainer {
-                display: flex;
-                justify-content: space-between;
+                @include childCenter(space-between);
                 margin-bottom: 30px;
                 width: 1130px;
 
@@ -71,16 +69,14 @@
 
             &-partnairs {
                 margin-top: 100px;
-                display: flex;
-                justify-content: space-between;
+                @include childCenter(space-between);
                 padding-bottom: 90px;
-                border-bottom: 1px solid $grey4;
+                border-bottom: 1px solid $grey1;
 
                 a {
                     transition: 0.2s;
                     transform: translate3D(0px, 100%, 0px);
                     opacity: 0;
-                    animation: newsAnim 1.5s both;
 
                     &:hover {
                         opacity: 0.7;
@@ -102,8 +98,7 @@
         }
 
         &-bottom {
-            display: flex;
-            justify-content: space-between;
+            @include childCenter(space-between);
             margin-top: 60px;
 
             &-text {
