--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -14,7 +14,6 @@
 body {
   max-width: 100vw;
   background: #1D1D1D;
-  height: 100vh;
   text-align: left;
 }
 
@@ -225,8 +224,8 @@ li {
 }
 .header__text {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   transform: translateX(-40px);
   -webkit-animation: headerLeftAnim 1.5s forwards;
           animation: headerLeftAnim 1.5s forwards;
@@ -251,8 +250,8 @@ li {
   border-radius: 6px;
   cursor: pointer;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   margin-bottom: 30px;
   font-size: 0.9rem;
 }
@@ -288,6 +287,7 @@ li {
 }
 .header__text-content-buttonsContainer {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   max-width: 300px;
 }
@@ -330,6 +330,7 @@ li {
 .news {
   background: #0D0D0D;
   display: flex;
+  align-items: center;
   justify-content: center;
   padding: 60px 0 120px;
 }
@@ -343,6 +344,7 @@ li {
 }
 .news__container-top-buttonsContainer {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-bottom: 30px;
   width: 1130px;
@@ -387,16 +389,15 @@ li {
 .news__container-top-partnairs {
   margin-top: 100px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding-bottom: 90px;
-  border-bottom: 1px solid #4A4A4A;
+  border-bottom: 1px solid #323232;
 }
 .news__container-top-partnairs a {
   transition: 0.2s;
   transform: translate3D(0px, 100%, 0px);
   opacity: 0;
-  -webkit-animation: newsAnim 1.5s both;
-          animation: newsAnim 1.5s both;
 }
 .news__container-top-partnairs a:hover {
   opacity: 0.7;
@@ -419,6 +420,7 @@ li {
 }
 .news__container-bottom {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-top: 60px;
 }
@@ -460,6 +462,7 @@ li {
   position: relative;
   padding-bottom: 60px;
   z-index: 2;
+  background: #1D1D1D;
 }
 .section-mine__bandereau {
   background: url("../img/minebg2.jpg") center/cover;
@@ -575,8 +578,9 @@ li {
 }
 .section-use__main-buttonsContainer {
   display: flex;
-  z-index: 1;
+  align-items: center;
   justify-content: space-around;
+  z-index: 1;
   max-width: 480px;
   margin: 0 auto;
   padding-top: 20px;
@@ -589,6 +593,7 @@ li {
   max-width: 1080px;
   margin: 0 auto;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-bottom: 20px;
 }
@@ -679,6 +684,21 @@ li {
 .section-use__partnairs-logo img {
   height: 30px;
   margin: 30px;
+  opacity: 0;
+  transform: translate3D(0px, 100%, 0px);
+  transition: 0.2s;
+}
+@-webkit-keyframes useAnim {
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+@keyframes useAnim {
+  to {
+    transform: none;
+    opacity: 1;
+  }
 }
 
 .section-techno__container {
@@ -702,6 +722,7 @@ li {
 }
 .section-techno__container-info {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 .section-techno__container-info-content {
@@ -738,7 +759,7 @@ li {
 }
 .section-techno__container-info-content:hover {
   scale: 1.08;
-  background: #4A4A4A;
+  background: #323232;
 }
 
 .footer-top {
@@ -751,6 +772,7 @@ li {
 }
 .footer-top__container-mail {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding-bottom: 50px;
   border-bottom: 1px solid rgba(133, 133, 133, 0.5);
@@ -787,6 +809,7 @@ li {
 }
 .footer-top__container-index {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   padding: 40px 0;
   max-width: 1000px;
