--- a/assets/style/layout/_nav.scss
+++ b/assets/style/layout/_nav.scss
@@ -199,19 +199,30 @@
         transform: translateY(0);
     }
 
+    .clicked__menu--open {
+        visibility: visible;
+        transform: translateY(0%);
+    }
+
+    .clicked__menu--close {
+        transform: translateY(-100%);
+    }
+
     &__smartphone--menu {
-        // visibility: hidden;
+        visibility: hidden;
         display: flex;
         flex-direction: column;
         position: absolute;
         top: -11px;
         width: 100vw;
         cursor: default;
+        transform: translateY(-100%);
+        transition: transform 300ms ease-in-out;
 
         &-closed {
             display: flex;
             justify-content: flex-end;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
 
             img {
                 height: 20px;
@@ -221,16 +232,14 @@
 
         &-open {
             margin-bottom: 35px;
-
-            ul {
-                margin-left: 16px;
-            }
+            padding-left: 16px;
 
             li {
-                font-size: 1.5rem;
+                font-size: 1.45rem;
                 font-weight: 400;
-                margin-bottom: 15px;
+                margin-bottom: 0px;
                 line-height: 23px;
+                list-style-type: none;
             }
 
             img {
@@ -247,29 +256,60 @@
 
 .build__responsive {
     overflow: hidden;
+    margin-bottom: 100px;
+
+    li:first-child {
+        margin-top: 15px;
+    }
+
+    li {
+        margin-bottom: 8px;
+    }
+
 
     &--menu {
         height: 0;
-        transition: height 200ms ease-in, padding 200ms ease-in;
+        transition: height 200ms ease-in;
     }
 }
 
 .use__responsive {
     overflow: hidden;
 
+    li:first-child {
+        margin-top: 15px;
+    }
+
+    li {
+        margin-bottom: 8px;
+    }
+
     &--menu {
         height: 0;
-        transition: height 200ms ease-in, padding 200ms ease-in;
+        transition: height 200ms ease-in;
     }
 }
 
 .resources__responsive {
     overflow: hidden;
 
+    li:first-child {
+        margin-top: 15px;
+    }
+
+    li {
+        margin-bottom: 8px;
+    }
+
+
     &--menu {
         height: 0;
-        transition: height 200ms ease-in, padding 200ms ease-in;
+        transition: height 200ms ease-in;
     }
+}
+
+.title_responsive {
+    padding-bottom: 15px;
 }
 
 #responsive__menu {
@@ -279,11 +319,13 @@
         color: #bbbbbb;
         line-height: 20px;
         font-weight: 300;
-        padding: 10px 0;
     }
 }
 
 .response_clicked {
-    height: 150px;
-    padding-top: 15px;
+    height: 155px;
+}
+
+.response_clicked2 {
+    height: 130px;
 }
