--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -7,6 +7,15 @@
     opacity: 0;
     animation: headerAnim 2.5s forwards;
 
+    @media screen and (max-width: 1200px) {
+        grid-template-columns: 100%;
+        grid-template-rows: 50% 50%;
+        grid-template-areas:
+            "text"
+            "graph";
+        overflow-y: hidden;
+    }
+
     @keyframes headerAnim {
         to {
             opacity: 1;
@@ -18,6 +27,12 @@
         transform: translateX(-40px);
         animation: headerLeftAnim 1.5s forwards;
 
+        @media screen and (max-width: 1200px) {
+            grid-area: text;
+            padding-top: 200px;
+        }
+
+
         @keyframes headerLeftAnim {
             to {
                 transform: translateX(0);
@@ -27,6 +42,10 @@
         &-content {
             max-width: 490px;
             margin: 0 auto;
+
+            @media screen and (max-width: 1200px) {
+                max-width: 1030px;
+            }
 
             &-link {
                 background: linear-gradient(90.06deg, $color1 10.06%, $color2 92.17%);
@@ -84,12 +103,24 @@
     &__img {
         position: relative;
 
+        @media screen and (max-width: 1200px) {
+            grid-area: graph;
+            z-index: -1;
+        }
+
         &-base {
             width: 140%;
             position: absolute;
             top: 50%;
             left: 70%;
             transform: translate(-50%, -50%);
+
+            @media screen and (max-width: 1200px) {
+                width: 90%;
+                left: 75%;
+                top: 100%;
+                box-sizing: border-box;
+            }
         }
 
         &-ligns {
@@ -99,9 +130,19 @@
             top: 48%;
             perspective: none;
 
+            @media screen and (max-width: 1200px) {
+                transform: translate(-50%, -50%) scale(2);
+                left: 60%;
+                top: 100%;
+            }
+
             &-content {
                 transform: rotateX(54.7356103deg) rotateY(0deg) rotateZ(45deg);
                 width: 135%;
+
+                @media screen and (max-width: 1200px) {
+                    width: 120%;
+                }
             }
 
         }
@@ -112,6 +153,12 @@
             top: 49%;
             width: 76%;
             transform: translate(-50%, -50%);
+
+            @media screen and (max-width: 1200px) {
+                left: 85%;
+                top: 100%;
+                width: 50%;
+            }
         }
 
         &-marker {
@@ -120,6 +167,12 @@
             top: 49%;
             left: 29%;
             transform: translate(-50%, -50%);
+
+            @media screen and (max-width: 1200px) {
+                width: 13%;
+                top: 100%;
+                left: 50%;
+            }
         }
     }
 }
