--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -32,6 +32,9 @@
             padding-top: 200px;
         }
 
+        @media screen and (max-width: 825px) {
+            padding-top: 300px;
+        }
 
         @keyframes headerLeftAnim {
             to {
@@ -45,6 +48,18 @@
 
             @media screen and (max-width: 1200px) {
                 max-width: 1030px;
+            }
+
+            @media screen and (max-width: 991px) {
+                max-width: 840px;
+            }
+
+            @media screen and (max-width: 825px) {
+                max-width: 670px;
+            }
+
+            @media screen and (max-width: 768px) {
+                max-width: 720px;
             }
 
             &-link {
@@ -75,6 +90,21 @@
                 line-height: 99px;
                 margin-bottom: 20px;
                 letter-spacing: -3px;
+
+                @media screen and (max-width: 991px) {
+                    font-size: 5.6rem;
+                    letter-spacing: -4px;
+                    line-height: 0.9;
+                }
+
+                @media screen and (max-width: 825px) {
+                    max-width: 500px;
+                }
+
+                @media screen and (max-width: 768px) {
+                    max-width: none;
+                    font-size: 4.3rem;
+                }
             }
 
             h3 {
