--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -381,6 +381,11 @@ li {
     padding-top: 200px;
   }
 }
+@media screen and (max-width: 825px) {
+  .header__text {
+    padding-top: 300px;
+  }
+}
 @-webkit-keyframes headerLeftAnim {
   to {
     transform: translateX(0);
@@ -398,6 +403,21 @@ li {
 @media screen and (max-width: 1200px) {
   .header__text-content {
     max-width: 1030px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .header__text-content {
+    max-width: 840px;
+  }
+}
+@media screen and (max-width: 825px) {
+  .header__text-content {
+    max-width: 670px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header__text-content {
+    max-width: 720px;
   }
 }
 .header__text-content-link {
@@ -426,6 +446,24 @@ li {
   line-height: 99px;
   margin-bottom: 20px;
   letter-spacing: -3px;
+}
+@media screen and (max-width: 991px) {
+  .header__text-content h1 {
+    font-size: 5.6rem;
+    letter-spacing: -4px;
+    line-height: 0.9;
+  }
+}
+@media screen and (max-width: 825px) {
+  .header__text-content h1 {
+    max-width: 500px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header__text-content h1 {
+    max-width: none;
+    font-size: 4.3rem;
+  }
 }
 .header__text-content h3 {
   color: #474DFF;
