--- a/assets/style/layout/_header.scss
+++ b/assets/style/layout/_header.scss
@@ -47,7 +47,8 @@
             margin: 0 auto;
 
             @media screen and (max-width: 1200px) {
-                max-width: 1030px;
+                max-width: 900px;
+                margin: 0 50px;
             }
 
             @media screen and (max-width: 991px) {
@@ -60,6 +61,12 @@
 
             @media screen and (max-width: 768px) {
                 max-width: 720px;
+                margin: 0 20px;
+            }
+
+            @media screen and (max-width: 315px) {
+                max-width: 90%;
+                margin: 0 auto;
             }
 
             &-link {
@@ -70,6 +77,7 @@
                 @include childCenter(space-between);
                 margin-bottom: 30px;
                 font-size: 0.9rem;
+                width: 90%;
 
                 img {
                     height: 12px;
@@ -105,6 +113,11 @@
                     max-width: none;
                     font-size: 4.3rem;
                 }
+
+                @media screen and (max-width: 450px) {
+                    font-size: 3.9rem;
+                    letter-spacing: -3px;
+                }
             }
 
             h3 {
@@ -113,19 +126,26 @@
                 font-weight: 100;
                 line-height: 38px;
                 margin-bottom: 19px;
+                letter-spacing: -1px;
+
+                @media screen and (max-width: 450px) {
+                    font-size: 2.3rem;
+                    line-height: 0.9;
+                    font-weight: 300;
+                    max-width: 100%;
+                }
             }
 
             p {
                 font-weight: 300;
-                line-height: 28px;
+                line-height: 1.4;
                 font-size: 1.2rem;
                 opacity: 0.8;
                 margin-bottom: 40px;
-            }
 
-            &-buttonsContainer {
-                @include childCenter(space-between);
-                max-width: 300px;
+                @media screen and (max-width: 450px) {
+                    font-size: 1rem;
+                }
             }
         }
     }
@@ -151,6 +171,24 @@
                 top: 100%;
                 box-sizing: border-box;
             }
+
+            @media screen and (max-width: 991px) {
+                width: 80%;
+                left: 80%;
+                top: 90%;
+            }
+
+            @media screen and (max-width: 768px) {
+                width: 100%;
+                left: 70%;
+                top: 103%;
+            }
+
+            @media screen and (max-width: 465px) {
+                width: 150%;
+                left: 75%;
+                top: 103%;
+            }
         }
 
         &-ligns {
@@ -166,12 +204,36 @@
                 top: 100%;
             }
 
+            @media screen and (max-width: 991px) {
+                left: 66%;
+                top: 88%;
+            }
+
+            @media screen and (max-width: 768px) {
+                left: 54%;
+                top: 103%;
+            }
+
+            @media screen and (max-width: 465px) {
+                left: 43%;
+                top: 102%;
+            }
+
             &-content {
                 transform: rotateX(54.7356103deg) rotateY(0deg) rotateZ(45deg);
                 width: 135%;
 
                 @media screen and (max-width: 1200px) {
                     width: 120%;
+                }
+
+                @media screen and (max-width: 768px) {
+                    width: 115%;
+                }
+
+
+                @media screen and (max-width: 465px) {
+                    width: 135%;
                 }
             }
 
@@ -189,6 +251,24 @@
                 top: 100%;
                 width: 50%;
             }
+
+            @media screen and (max-width: 991px) {
+                left: 88%;
+                top: 90%;
+                width: 45%;
+            }
+
+            @media screen and (max-width: 768px) {
+                left: 80%;
+                top: 102%;
+                width: 55%;
+            }
+
+            @media screen and (max-width: 465px) {
+                left: 93%;
+                top: 102%;
+                width: 86%;
+            }
         }
 
         &-marker {
@@ -202,6 +282,24 @@
                 width: 13%;
                 top: 100%;
                 left: 50%;
+            }
+
+            @media screen and (max-width: 991px) {
+                width: 11%;
+                top: 88%;
+                left: 58%;
+            }
+
+            @media screen and (max-width: 768px) {
+                width: 12%;
+                top: 100%;
+                left: 42%;
+            }
+
+            @media screen and (max-width: 465px) {
+                width: 20%;
+                top: 102%;
+                left: 35%;
             }
         }
     }
