--- a/assets/style/layout/_section1.scss
+++ b/assets/style/layout/_section1.scss
@@ -175,13 +175,34 @@
             @include childCenter(space-between);
             margin-top: 60px;
 
+            @media screen and (max-width: 991px) {
+                display: block;
+                margin-top: 0px !important;
+            }
+
             &-text {
                 max-width: 450px;
+
+                @media screen and (max-width: 991px) {
+                    max-width: 700px;
+                }
+
+                @media screen and (max-width: 768px) {
+                    text-align: center;
+                }
 
                 h2 {
                     line-height: 1.1;
                     letter-spacing: -2px;
                     margin-bottom: 30px;
+
+                    @media screen and (max-width: 991px) {
+                        text-align: left;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        text-align: center;
+                    }
                 }
 
                 p {
@@ -195,6 +216,15 @@
             &-numbers {
                 text-align: right;
                 margin-bottom: 40px;
+
+                @media screen and (max-width: 991px) {
+                    text-align: center;
+                    margin-top: 40px;
+                }
+
+                @media screen and (max-width: 768px) {
+                    margin-bottom: 0px;
+                }
 
                 &-content {
 
@@ -213,6 +243,10 @@
                         letter-spacing: 0;
                         margin-bottom: 10px;
                         line-height: 1.2;
+
+                        @media screen and (max-width: 450px) {
+                            font-size: 2.3rem !important;
+                        }
                     }
                 }
             }
