--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -40,6 +40,11 @@ li {
     border-radius: 6px;
   }
 }
+@media screen and (max-width: 260px) {
+  .button--news {
+    padding: 5px;
+  }
+}
 .button--green {
   background: #15D188;
 }
@@ -874,13 +879,39 @@ li {
   justify-content: space-between;
   margin-top: 60px;
 }
+@media screen and (max-width: 991px) {
+  .news__container-bottom {
+    display: block;
+    margin-top: 0px !important;
+  }
+}
 .news__container-bottom-text {
   max-width: 450px;
+}
+@media screen and (max-width: 991px) {
+  .news__container-bottom-text {
+    max-width: 700px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .news__container-bottom-text {
+    text-align: center;
+  }
 }
 .news__container-bottom-text h2 {
   line-height: 1.1;
   letter-spacing: -2px;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 991px) {
+  .news__container-bottom-text h2 {
+    text-align: left;
+  }
+}
+@media screen and (max-width: 768px) {
+  .news__container-bottom-text h2 {
+    text-align: center;
+  }
 }
 .news__container-bottom-text p {
   margin-bottom: 40px;
@@ -891,6 +922,17 @@ li {
 .news__container-bottom-numbers {
   text-align: right;
   margin-bottom: 40px;
+}
+@media screen and (max-width: 991px) {
+  .news__container-bottom-numbers {
+    text-align: center;
+    margin-top: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .news__container-bottom-numbers {
+    margin-bottom: 0px;
+  }
 }
 .news__container-bottom-numbers-content h4 {
   color: #888888;
@@ -907,6 +949,11 @@ li {
   margin-bottom: 10px;
   line-height: 1.2;
 }
+@media screen and (max-width: 450px) {
+  .news__container-bottom-numbers-content h3 {
+    font-size: 2.3rem !important;
+  }
+}
 
 .section-mine {
   position: relative;
@@ -920,6 +967,17 @@ li {
   height: 600px;
   position: relative;
 }
+@media screen and (max-width: 768px) {
+  .section-mine__bandereau {
+    height: 400px;
+  }
+}
+@media screen and (max-width: 465px) {
+  .section-mine__bandereau {
+    height: 310px;
+    background: url("../img/minebg2.jpg") center/cover;
+  }
+}
 .section-mine__bandereau img {
   position: absolute;
   bottom: -1px;
@@ -931,15 +989,52 @@ li {
   max-width: 1100px;
   margin: 0 auto;
 }
+@media screen and (max-width: 1200px) {
+  .section-mine__container {
+    padding-left: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .section-mine__container {
+    padding-left: 0;
+  }
+}
 .section-mine__container-main {
   display: grid;
   grid-template-columns: 50% 50%;
+}
+@media screen and (max-width: 768px) {
+  .section-mine__container-main {
+    display: block;
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto;
+  }
 }
 .section-mine__container-main-text h2 {
   font-size: 10rem;
   letter-spacing: -10px;
   margin-bottom: 10px;
   line-height: 1.1;
+}
+@media screen and (max-width: 991px) {
+  .section-mine__container-main-text h2 {
+    font-size: 7.5rem;
+    letter-spacing: -6px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .section-mine__container-main-text h2 {
+    font-size: 5.6rem;
+    letter-spacing: -5px;
+    text-align: center !important;
+  }
+}
+@media screen and (max-width: 450px) {
+  .section-mine__container-main-text h2 {
+    font-size: 3.7rem;
+    letter-spacing: -4px;
+  }
 }
 .section-mine__container-main-text h3 {
   font-size: 2.8rem;
@@ -949,6 +1044,16 @@ li {
   margin-bottom: 30px;
   max-width: 500px;
 }
+@media screen and (max-width: 768px) {
+  .section-mine__container-main-text h3 {
+    max-width: none;
+  }
+}
+@media screen and (max-width: 450px) {
+  .section-mine__container-main-text h3 {
+    font-size: 2.2rem;
+  }
+}
 .section-mine__container-main-text p {
   margin-bottom: 40px;
   font-size: 1.2rem;
@@ -956,11 +1061,34 @@ li {
   opacity: 0.8;
   max-width: 540px;
 }
+@media screen and (max-width: 768px) {
+  .section-mine__container-main-text p {
+    max-width: none;
+  }
+}
+@media screen and (max-width: 450px) {
+  .section-mine__container-main-text p {
+    font-size: 1.1rem;
+  }
+}
 .section-mine__container-main-img img {
-  max-width: 36%;
+  width: 36%;
+  min-width: 500px;
   box-sizing: border-box;
   position: absolute;
   top: 500px;
+}
+@media screen and (max-width: 768px) {
+  .section-mine__container-main-img img {
+    position: inherit;
+    margin-top: 40px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .section-mine__container-main-img img {
+    min-width: none;
+    max-width: 36%;
+  }
 }
 .section-mine__container-bottom {
   display: flex;
