--- a/assets/style/_settings.scss
+++ b/assets/style/_settings.scss
@@ -75,6 +75,11 @@ li {
 
     &--green {
         background: #15D188;
+
+        @media screen and (max-width: 516px) {
+            margin-bottom: 20px;
+        }
+
     }
 
     &--blackFont {
