--- a/assets/style/layout/_section3.scss
+++ b/assets/style/layout/_section3.scss
@@ -3,13 +3,14 @@
     text-align: center;
 
     &__header {
+        background-color: white;
 
         img {
             width: 100%;
-            position: absolute;
+            position: relative;
             top: -3px;
             left: 0;
-            z-index: -1;
+            z-index: 1;
         }
 
         h2 {
@@ -18,7 +19,28 @@
             letter-spacing: -10px;
             margin-bottom: 10px;
             line-height: 1.1;
-            padding-top: 520px;
+            position: relative;
+            z-index: 100;
+            margin-top: -150px;
+
+            @media screen and (max-width: 991px) {
+                font-size: 7.5rem;
+                letter-spacing: -6px;
+                margin-top: -100px;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 5.6rem;
+                letter-spacing: -5px;
+                margin-top: -50px;
+            }
+
+
+            @media screen and (max-width: 450px) {
+                font-size: 3.7rem;
+                letter-spacing: -4px;
+                margin-top: -15px;
+            }
         }
 
         h3 {
@@ -27,7 +49,14 @@
             line-height: 1.1;
             letter-spacing: -2px;
             max-width: 500px;
-            margin: 0 auto 30px;
+            margin: 0 auto;
+            padding-bottom: 30px;
+            position: relative;
+            z-index: 100;
+
+            @media screen and (max-width: 450px) {
+                font-size: 2.2rem;
+            }
         }
     }
 
@@ -50,6 +79,10 @@
             max-width: 480px;
             margin: 0 auto;
             padding-top: 20px;
+
+            @media screen and (max-width: 516px) {
+                flex-direction: column;
+            }
         }
     }
 
@@ -63,6 +96,14 @@
             @include childCenter(space-between);
             margin-bottom: 20px;
 
+            @media screen and (max-width : 1200px) {
+                max-width: 900px;
+            }
+
+            @media screen and (max-width : 991px) {
+                max-width: 700px;
+            }
+
             &-box {
                 background: #F5F7F9;
                 padding: 26px 40px;
@@ -70,6 +111,13 @@
                 border-radius: 10px;
                 margin: 0 10px;
 
+                @media screen and (max-width : 1200px) {
+                    padding: 26px 30px;
+                }
+
+                &--2 {
+                    padding: 26px 40px 30px;
+                }
 
                 h4 {
                     font-size: 0.9rem;
@@ -100,6 +148,14 @@
             position: relative;
             overflow: hidden;
 
+            @media screen and (max-width : 1200px) {
+                max-width: 880px;
+            }
+
+            @media screen and (max-width : 991px) {
+                max-width: 680px;
+            }
+
             &-textContent {
                 text-align: left;
 
@@ -110,16 +166,24 @@
                     line-height: 1.1;
                     margin-bottom: 30px;
                     max-width: 600px;
+
+                    @media screen and (max-width : 1200px) {
+                        max-width: 500px;
+                    }
                 }
 
                 p {
                     color: $blackf;
                     margin-bottom: 10px;
                     font-size: 1rem;
-                    font-weight: 500;
+                    font-weight: 600;
                     line-height: 1.4;
                     opacity: 0.8;
                     max-width: 590px;
+
+                    @media screen and (max-width : 1200px) {
+                        max-width: 500px;
+                    }
                 }
 
                 a {
